manifests/todo-app-list/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: todo-app-list
spec:
  ingressClassName: nginx
  rules:
  - host: todo-list.mydomain.tld
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-webapp-service
            port:
              number: 80
  - host: mongo-express.mydomain.tld
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
